rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strdouble_sharp_octave.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C𝄪4
Note { pitch: C, accs: [DoubleSharp], octave: Some(4), cents: None }
display:C𝄪4
