rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strexclamation.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C!
Note { pitch: C, accs: [Flat], octave: None, cents: None }
display:C♭
