rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strflat.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:Cb
Note { pitch: C, accs: [Flat], octave: None, cents: None }
display:C♭
