rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strflat_octave_cents.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:Cb+4+25
Note { pitch: C, accs: [Flat], octave: Some(4), cents: Some(25) }
display:C♭4+25
