rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strmultiple_accidentals.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C##
Note { pitch: C, accs: [Sharp, Sharp], octave: None, cents: None }
display:C♯♯
