rust/crates/spek/src/snapshots/spek__notation__tests__test_note_from_strmultiple_naturals.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
C♮n
Note { pitch: C, accs: [Natural, Natural], octave: None, cents: None }
C♮♮
